Add multiple themes and initial application structure
- Created NatureTheme.xaml with earth tones and natural gradients.
- Created NeonTheme.xaml featuring vibrant colors and glowing effects.
- Developed OceanTheme.xaml with a blue palette and water-inspired gradients.
- Introduced SunsetTheme.xaml with warm gradient colors reminiscent of sunsets.
- Added VibrantTheme.xaml with a vibrant color palette and spectacular gradients.
- Established the initial application structure in App.xaml and App.xaml.cs.
- Created AssemblyInfo.cs for theme information.
- Set up the project file for .NET 8.0 with WPF support.
- Implemented MainWindow.xaml and MainWindow.xaml.cs for the main application window.

--- a/Comercial Estefannny/App.config
+++ b/Comercial Estefannny/App.config
@@ -1,12 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-   <connectionStrings>
-        <add name="Cadena"
-             connectionString="Data Source=|DataDirectory|\comercial_Estefanny_base_datos.db;Version=3;"
-             providerName="System.Data.SQLite" />
-    </connectionStrings>
-
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+      <connectionStrings>
+        <!-- Cadena de conexión para SQLite -->
+        <add name="Cadena" 
+             connectionString="Data Source=.\comercial_Estefanny_base_datos.db;Version=3;" 
+             providerName="System.Data.SQLite" />
+    </connectionStrings>      <appSettings>
+        <!-- Configuraciones adicionales de la aplicación -->
+        <add key="SelectedGradient" value="SunsetFresa" />
+        <add key="EnableSpectacularEffects" value="true" />
+        <add key="GradientAnimationDuration" value="300" />
+        <add key="PreferredGradientCollection" value="Exclusive" />
+        <add key="EnableGradientPulse" value="true" />
+        <add key="EnableRainbowRotation" value="false" />
+        <add key="GlowIntensity" value="0.8" />
+        <add key="DropShadowEnabled" value="true" />
+        <add key="LastSelectedGradient" value="AuroraBorealis" />
+        <add key="GradientTransitionSpeed" value="500" />
+        <add key="SpectacularThemeVersion" value="2.0" />
+    </appSettings>
 </configuration>
