--- a/Comercial Estefannny/Properties/Settings.settings
+++ b/Comercial Estefannny/Properties/Settings.settings
@@ -3,5 +3,9 @@
   <Profiles>
     <Profile Name="(Default)" />
   </Profiles>
-  <Settings />
+  <Settings>
+    <Setting Name="SelectedTheme" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Light</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
