--- a/Comercial Estefannny/Sistema Estefanny.csproj
+++ b/Comercial Estefannny/Sistema Estefanny.csproj
@@ -1,12 +1,45 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">  <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>Sistema_Estefanny</RootNamespace>
+    <RootNamespace>Comercial_Estefannny</RootNamespace>
+    <AssemblyName>Comercial Estefannny</AssemblyName>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
+    <ImplicitUsings>enable</ImplicitUsings>    <UseWPF>true</UseWPF>
+    <EnableDefaultApplicationDefinition>true</EnableDefaultApplicationDefinition>
+    <ApplicationIcon>shop_106574.ico</ApplicationIcon>
+    <!-- <ApplicationManifest>app.manifest</ApplicationManifest> -->
+    
+    <!-- Configuración de Debug -->
+    <Optimize>false</Optimize>
+    <DebugType>full</DebugType>
+    
+    <!-- Metadatos del assembly -->
+    <AssemblyTitle>Comercial Estefannny</AssemblyTitle>
+    <AssemblyDescription>Sistema de gestión comercial</AssemblyDescription>
+    <AssemblyCompany>Estefannny</AssemblyCompany>
+    <AssemblyProduct>Sistema Comercial</AssemblyProduct>
+    <AssemblyCopyright>Copyright © 2024</AssemblyCopyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Generated\**" />
+    <EmbeddedResource Remove="Generated\**" />
+    <None Remove="Generated\**" />
+    <Page Remove="Generated\**" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.5" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
+  </ItemGroup>
 
 </Project>
